kubernetes/core/kyverno/base/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kyverno-admission-controller
  namespace: kyverno
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/component: admission-controller
      app.kubernetes.io/instance: kyverno
  ingress:
    - fromEntities:
        - kube-apiserver
    - fromEntities:
        - remote-node
        - host
      toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
            - port: "443"
              protocol: TCP
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kyverno-background-controllers
  namespace: kyverno
spec:
  endpointSelector:
    matchExpressions:
      - key: app.kubernetes.io/component
        operator: In
        values:
          - background-controller
          - cleanup-controller
          - reports-controller
      - key: app.kubernetes.io/instance
        operator: In
        values:
          - kyverno
  egress:
    - toEntities:
        - kube-apiserver
